Update Grove architecture diagram to show load balancer and multiple frontends
- Added Cloud Load Balancer / Ingress Controller at the top
- Shows 3 frontends distributed across nodes (not one-per-node)
- Clarified NATS handles both request routing and cache sharing
- Added service discovery role for etcd
- More accurate representation of production deployment patterns

--- a/03-grove-distributed-serving.ipynb
+++ b/03-grove-distributed-serving.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c3fe7c45",
+   "id": "021e0599",
    "metadata": {},
    "source": [
     "# Lab 3: Distributed Serving with Grove\n",
@@ -37,33 +37,39 @@
     "### Architecture Components\n",
     "\n",
     "```\n",
-    "┌─────────────────────────────────────────────────────────┐\n",
-    "│                    Kubernetes Cluster                    │\n",
-    "├─────────────────────────────────────────────────────────┤\n",
-    "│                                                           │\n",
-    "│  ┌──────────────┐        ┌──────────────┐               │\n",
-    "│  │  Frontend 1  │        │  Frontend 2  │               │\n",
-    "│  └──────┬───────┘        └──────┬───────┘               │\n",
-    "│         │                       │                        │\n",
-    "│         └───────────┬───────────┘                        │\n",
-    "│                     │                                    │\n",
-    "│         ┌───────────▼───────────┐                        │\n",
-    "│         │  NATS Message Bus     │                        │\n",
-    "│         │  (Cache Sharing)      │                        │\n",
-    "│         └───────────┬───────────┘                        │\n",
-    "│                     │                                    │\n",
-    "│         ┌───────────▼───────────┐                        │\n",
-    "│         │  etcd (Coordination)  │                        │\n",
-    "│         └───────────────────────┘                        │\n",
-    "│                     │                                    │\n",
-    "│      ┌──────────────┼──────────────┐                     │\n",
-    "│      │              │              │                     │\n",
-    "│  ┌───▼────┐    ┌───▼────┐    ┌───▼────┐                │\n",
-    "│  │Worker 1│    │Worker 2│    │Worker 3│                │\n",
-    "│  │(Node 1)│    │(Node 2)│    │(Node 3)│                │\n",
-    "│  └────────┘    └────────┘    └────────┘                │\n",
-    "│  Shared KV Cache across workers via NATS                │\n",
-    "└─────────────────────────────────────────────────────────┘\n",
+    "               ┌────────────────────────────┐\n",
+    "               │  Cloud Load Balancer       │\n",
+    "               │  or Ingress Controller     │\n",
+    "               └──────────┬─────────────────┘\n",
+    "                          │\n",
+    "         ┌────────────────┼────────────────┐\n",
+    "         │                │                │\n",
+    "    ┌────▼─────┐    ┌────▼─────┐    ┌────▼─────┐\n",
+    "    │Frontend 1│    │Frontend 2│    │Frontend 3│\n",
+    "    │ (Node 1) │    │ (Node 2) │    │ (Node 3) │\n",
+    "    └────┬─────┘    └────┬─────┘    └────┬─────┘\n",
+    "         │                │                │\n",
+    "         └────────────────┼────────────────┘\n",
+    "                          │\n",
+    "              ┌───────────▼───────────┐\n",
+    "              │  NATS Message Bus     │\n",
+    "              │  (Request Routing &   │\n",
+    "              │   Cache Sharing)      │\n",
+    "              └───────────┬───────────┘\n",
+    "                          │\n",
+    "              ┌───────────▼───────────┐\n",
+    "              │  etcd (Coordination)  │\n",
+    "              │  (Service Discovery)  │\n",
+    "              └───────────┬───────────┘\n",
+    "                          │\n",
+    "         ┌────────────────┼────────────────┐\n",
+    "         │                │                │\n",
+    "    ┌────▼─────┐    ┌────▼─────┐    ┌────▼─────┐\n",
+    "    │ Worker 1 │    │ Worker 2 │    │ Worker 3 │\n",
+    "    │(Node 1/4)│    │(Node 2/5)│    │(Node 3/6)│\n",
+    "    └──────────┘    └──────────┘    └──────────┘\n",
+    "    \n",
+    "    Shared KV Cache across workers via NATS\n",
     "```\n",
     "\n",
     "### Key Concepts\n",
@@ -148,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d74c3342",
+   "id": "007baecd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +180,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a649bc29",
+   "id": "f1a2bc17",
    "metadata": {},
    "source": [
     "### Step 2: Install NATS Message Bus\n",
@@ -185,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6478f91d",
+   "id": "fd231104",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +223,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78b22727",
+   "id": "dea5d5ce",
    "metadata": {},
    "source": [
     "### Step 3: Install etcd Coordination Layer\n",
@@ -228,7 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dfc56f39",
+   "id": "9aa7fa27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +266,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a1ccd61",
+   "id": "5ad9dca6",
    "metadata": {},
    "source": [
     "### Step 4: Verify Grove Infrastructure\n",
@@ -271,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da26b757",
+   "id": "cf314d0e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a9a2f54",
+   "id": "fc138055",
    "metadata": {},
    "source": [
     "### Step 4: Enable Prometheus Monitoring\n",
@@ -314,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2822bd53",
+   "id": "8e4131f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +375,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b208ac9",
+   "id": "8d55cb23",
    "metadata": {},
    "source": [
     "---\n",
@@ -392,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "420dedc2",
+   "id": "f700a268",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,7 +463,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b0f5d8b",
+   "id": "5dfc8150",
    "metadata": {},
    "source": [
     "### Step 2: Create NodePort Service\n",
@@ -468,7 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0aa03fe1",
+   "id": "8d2118cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,7 +506,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a1206ff",
+   "id": "3f403ecf",
    "metadata": {},
    "source": [
     "### Step 3: Wait for Deployment"
@@ -509,7 +515,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21e2f311",
+   "id": "15b191d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,7 +542,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7b45bbf",
+   "id": "258ffc2f",
    "metadata": {},
    "source": [
     "### Step 4: Test Inference"
@@ -545,7 +551,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b98262d2",
+   "id": "e1057cf7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +574,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1e4c7ad",
+   "id": "1b4631f0",
    "metadata": {},
    "source": [
     "### Step 5: Verify NATS Communication"
@@ -577,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "614f1832",
+   "id": "f3143059",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +609,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7841e0a9",
+   "id": "083146e2",
    "metadata": {},
    "source": [
     "---\n",
@@ -618,7 +624,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a85538e8",
+   "id": "f04f93fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -643,7 +649,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8971de2e",
+   "id": "d3de1030",
    "metadata": {},
    "source": [
     "### Step 2: Understanding NATS Metrics\n",
@@ -761,7 +767,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3a9b99d",
+   "id": "f1423530",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -812,7 +818,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5014c4a4",
+   "id": "76e84413",
    "metadata": {},
    "source": [
     "---\n",
@@ -845,7 +851,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1530ff6b",
+   "id": "cf7b3be6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -881,7 +887,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00400cde",
+   "id": "c9b5f2ed",
    "metadata": {},
    "source": [
     "---\n",
@@ -896,7 +902,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b983c8d",
+   "id": "68e7e177",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -927,7 +933,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b508d93",
+   "id": "8ea79c44",
    "metadata": {},
    "source": [
     "**Note**: Cache hit/miss metrics depend on workload patterns. In a single-node setup, local cache is more efficient than distributed cache, so you may not see significant Grove cache sharing activity.\n",
@@ -940,7 +946,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "022b679d",
+   "id": "13c37870",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -956,7 +962,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d081697f",
+   "id": "52bfee2c",
    "metadata": {},
    "source": [
     "### etcd Health Check\n",
@@ -967,7 +973,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f1b4597",
+   "id": "a0e64938",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -991,7 +997,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b305b523",
+   "id": "f78e0e65",
    "metadata": {},
    "source": [
     "---\n",
@@ -1004,7 +1010,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28f9f54b",
+   "id": "cf658672",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1021,7 +1027,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17ade5a8",
+   "id": "e613fb83",
    "metadata": {},
    "source": [
     "### Step 2: Verify Lab 1 Deployment is Still Running\n",
@@ -1032,7 +1038,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84b03a38",
+   "id": "0b2d4d8b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1057,7 +1063,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17797378",
+   "id": "e601618f",
    "metadata": {},
    "source": [
     "### Step 3: Remove Grove Infrastructure (Optional)\n",
@@ -1068,7 +1074,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68a2d77d",
+   "id": "f5c67f52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1095,7 +1101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c1d84b4",
+   "id": "f4d27304",
    "metadata": {},
    "source": [
     "---\n",
@@ -1160,7 +1166,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d45e3ee0",
+   "id": "c7ee0843",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1177,7 +1183,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38528bae",
+   "id": "69a0d2e2",
    "metadata": {},
    "source": [
     "### etcd Not Starting"
@@ -1186,7 +1192,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f672d6df",
+   "id": "6bae0752",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1203,7 +1209,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "825168e9",
+   "id": "44394edf",
    "metadata": {},
    "source": [
     "### Workers Not Connecting to Grove"
@@ -1212,7 +1218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d45fc509",
+   "id": "5f563756",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1229,7 +1235,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63c37471",
+   "id": "8fcfcf2c",
    "metadata": {},
    "source": [
     "### No Cache Sharing Observed\n",
