Clarify architecture diagram node numbering
- Changed confusing '(Node 1/4)' notation to clear '(Node 4)' for workers
- Added '+GPU' labels to worker nodes to show they need GPU resources
- Added note explaining workers typically run on separate GPU nodes from CPU frontends
- Makes clear that node separation is common in production but not required

--- a/03-grove-distributed-serving.ipynb
+++ b/03-grove-distributed-serving.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "021e0599",
+   "id": "6bcbad0a",
    "metadata": {},
    "source": [
     "# Lab 3: Distributed Serving with Grove\n",
@@ -66,10 +66,15 @@
     "         │                │                │\n",
     "    ┌────▼─────┐    ┌────▼─────┐    ┌────▼─────┐\n",
     "    │ Worker 1 │    │ Worker 2 │    │ Worker 3 │\n",
-    "    │(Node 1/4)│    │(Node 2/5)│    │(Node 3/6)│\n",
+    "    │ (Node 4) │    │ (Node 5) │    │ (Node 6) │\n",
+    "    │  +GPU    │    │  +GPU    │    │  +GPU    │\n",
     "    └──────────┘    └──────────┘    └──────────┘\n",
     "    \n",
     "    Shared KV Cache across workers via NATS\n",
+    "\n",
+    "Note: Workers typically run on GPU nodes (4-6), separate from\n",
+    "      CPU-only frontend nodes (1-3). In smaller clusters, they\n",
+    "      may share nodes with frontends.\n",
     "```\n",
     "\n",
     "### Key Concepts\n",
@@ -154,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "007baecd",
+   "id": "9780f0ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1a2bc17",
+   "id": "7010539f",
    "metadata": {},
    "source": [
     "### Step 2: Install NATS Message Bus\n",
@@ -191,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd231104",
+   "id": "e4558961",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +228,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dea5d5ce",
+   "id": "2fbf9067",
    "metadata": {},
    "source": [
     "### Step 3: Install etcd Coordination Layer\n",
@@ -234,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9aa7fa27",
+   "id": "cca2a8aa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ad9dca6",
+   "id": "e46a6658",
    "metadata": {},
    "source": [
     "### Step 4: Verify Grove Infrastructure\n",
@@ -277,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf314d0e",
+   "id": "3aefb017",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +314,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc138055",
+   "id": "8af38331",
    "metadata": {},
    "source": [
     "### Step 4: Enable Prometheus Monitoring\n",
@@ -320,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e4131f2",
+   "id": "3b203538",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d55cb23",
+   "id": "20ee6166",
    "metadata": {},
    "source": [
     "---\n",
@@ -398,7 +403,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f700a268",
+   "id": "3e6f9f5f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,7 +468,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5dfc8150",
+   "id": "ed475ff3",
    "metadata": {},
    "source": [
     "### Step 2: Create NodePort Service\n",
@@ -474,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d2118cc",
+   "id": "594c3a67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,7 +511,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f403ecf",
+   "id": "288f1d84",
    "metadata": {},
    "source": [
     "### Step 3: Wait for Deployment"
@@ -515,7 +520,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15b191d2",
+   "id": "4e7a90b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,7 +547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "258ffc2f",
+   "id": "8bf556fd",
    "metadata": {},
    "source": [
     "### Step 4: Test Inference"
@@ -551,7 +556,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1057cf7",
+   "id": "4e165928",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -574,7 +579,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b4631f0",
+   "id": "dd6ba758",
    "metadata": {},
    "source": [
     "### Step 5: Verify NATS Communication"
@@ -583,7 +588,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3143059",
+   "id": "37d2711b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,7 +614,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "083146e2",
+   "id": "2874e330",
    "metadata": {},
    "source": [
     "---\n",
@@ -624,7 +629,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f04f93fa",
+   "id": "eda0c777",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,7 +654,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3de1030",
+   "id": "3f142edf",
    "metadata": {},
    "source": [
     "### Step 2: Understanding NATS Metrics\n",
@@ -767,7 +772,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1423530",
+   "id": "78055670",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -818,7 +823,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76e84413",
+   "id": "2408b4f2",
    "metadata": {},
    "source": [
     "---\n",
@@ -851,7 +856,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf7b3be6",
+   "id": "37f35fb6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -887,7 +892,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9b5f2ed",
+   "id": "e4e4b64a",
    "metadata": {},
    "source": [
     "---\n",
@@ -902,7 +907,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68e7e177",
+   "id": "250905f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -933,7 +938,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ea79c44",
+   "id": "f90f7b8f",
    "metadata": {},
    "source": [
     "**Note**: Cache hit/miss metrics depend on workload patterns. In a single-node setup, local cache is more efficient than distributed cache, so you may not see significant Grove cache sharing activity.\n",
@@ -946,7 +951,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13c37870",
+   "id": "cb2f78ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -962,7 +967,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52bfee2c",
+   "id": "45647a0d",
    "metadata": {},
    "source": [
     "### etcd Health Check\n",
@@ -973,7 +978,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0e64938",
+   "id": "9be81c48",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -997,7 +1002,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f78e0e65",
+   "id": "7eeba8fc",
    "metadata": {},
    "source": [
     "---\n",
@@ -1010,7 +1015,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf658672",
+   "id": "a742f106",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1027,7 +1032,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e613fb83",
+   "id": "a342a5d3",
    "metadata": {},
    "source": [
     "### Step 2: Verify Lab 1 Deployment is Still Running\n",
@@ -1038,7 +1043,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b2d4d8b",
+   "id": "0f2f7cbe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1063,7 +1068,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e601618f",
+   "id": "b7fda543",
    "metadata": {},
    "source": [
     "### Step 3: Remove Grove Infrastructure (Optional)\n",
@@ -1074,7 +1079,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5c67f52",
+   "id": "f0f41b57",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1101,7 +1106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4d27304",
+   "id": "874bc298",
    "metadata": {},
    "source": [
     "---\n",
@@ -1166,7 +1171,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7ee0843",
+   "id": "8904657d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1183,7 +1188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69a0d2e2",
+   "id": "02ca73b6",
    "metadata": {},
    "source": [
     "### etcd Not Starting"
@@ -1192,7 +1197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6bae0752",
+   "id": "387cd777",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1209,7 +1214,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44394edf",
+   "id": "03409cb1",
    "metadata": {},
    "source": [
     "### Workers Not Connecting to Grove"
@@ -1218,7 +1223,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f563756",
+   "id": "39f1b43d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1235,7 +1240,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8fcfcf2c",
+   "id": "999c661b",
    "metadata": {},
    "source": [
     "### No Cache Sharing Observed\n",
