Fix Lab 2 monitoring stack architecture inconsistencies
Critical fixes for cluster-wide vs namespace-scoped confusion:

1. Fixed Section 3: Deploy dashboard ConfigMap to user namespace ($NAMESPACE)
   - Changed from 'monitoring' namespace to '$NAMESPACE'
   - Users may not have permissions to write to monitoring namespace
   - Cluster-wide Grafana sidecar scans all namespaces for dashboards

2. Fixed Troubleshooting: Corrected ConfigMap name consistency
   - Changed from 'grafana-dynamo-dashboard' to 'grafana-dashboard-dynamo-inference'
   - Added troubleshooting notes for dashboard discovery timing

3. Fixed Exercise 4: Removed dangerous helm uninstall command
   - Changed from attempting to uninstall cluster-wide stack
   - Now only removes user's PodMonitors and dashboard ConfigMap
   - Preserves shared cluster infrastructure

4. Fixed Summary: Removed namespace-scoped references
   - Changed from 'namespace-scoped monitoring' to 'cluster-wide monitoring'
   - Updated key takeaways to reflect actual architecture
   - Added note about dashboard ConfigMap auto-discovery pattern

These changes ensure:
- Users don't need cluster-admin privileges
- Shared monitoring infrastructure is protected
- Commands will actually work as intended
- Architecture description matches implementation

--- a/02-monitoring-and-observability.ipynb
+++ b/02-monitoring-and-observability.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "054bf10d",
+   "id": "5f3d2fc2",
    "metadata": {},
    "source": [
     "# Lab 1 Extension: Monitoring Dynamo with Prometheus and Grafana\n",
@@ -58,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3e42ea6",
+   "id": "4aa65d27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d8eb778",
+   "id": "321e9371",
    "metadata": {},
    "source": [
     "### Step 2: Verify Monitoring Stack is Running\n",
@@ -106,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64b76317",
+   "id": "1d447b8c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7220b89e",
+   "id": "cd61ab6c",
    "metadata": {},
    "source": [
     "---\n",
@@ -155,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49eb1cfd",
+   "id": "a666726a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54894ce0",
+   "id": "ffefad8e",
    "metadata": {},
    "source": [
     "### Step 2: Check if PodMonitors Were Created\n",
@@ -181,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28f517d5",
+   "id": "d9d49a17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ac883d6",
+   "id": "b14e753a",
    "metadata": {},
    "source": [
     "### Step 3: Label PodMonitors for Prometheus Discovery\n",
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c07ecf3",
+   "id": "c36cb2fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "678b0496",
+   "id": "be198561",
    "metadata": {},
    "source": [
     "### Step 4: Manually Test Metrics Endpoint\n",
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48914a3e",
+   "id": "ac47d942",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c03e6a6",
+   "id": "e35e4f23",
    "metadata": {},
    "source": [
     "### Step 5: Send Test Traffic to Generate Metrics\n",
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "582bb40c",
+   "id": "387b2481",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b705e1a5",
+   "id": "ce6d0aaf",
    "metadata": {},
    "source": [
     "---\n",
@@ -330,20 +330,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5dc32ed2",
+   "id": "573cc7ff",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
     "# Create ConfigMap with dashboard JSON\n",
-    "echo \"Deploying Dynamo Inference Dashboard...\"\n",
+    "echo \"Deploying Dynamo Inference Dashboard to $NAMESPACE...\"\n",
     "\n",
-    "cat > /tmp/dynamo-inference-dashboard-configmap.yaml << 'EOF'\n",
+    "cat > /tmp/dynamo-inference-dashboard-configmap.yaml << EOF\n",
     "apiVersion: v1\n",
     "kind: ConfigMap\n",
     "metadata:\n",
     "  name: grafana-dashboard-dynamo-inference\n",
-    "  namespace: monitoring\n",
+    "  namespace: $NAMESPACE\n",
     "  labels:\n",
     "    grafana_dashboard: \"1\"\n",
     "data:\n",
@@ -357,14 +357,17 @@
     "kubectl apply -f /tmp/dynamo-inference-dashboard-configmap.yaml\n",
     "\n",
     "echo \"\"\n",
-    "echo \"✓ Dashboard ConfigMap deployed\"\n",
-    "echo \"  Grafana sidecar will auto-load it within ~30 seconds\"\n",
-    "echo \"  Access at: $GRAFANA_URL (look for 'Dynamo Inference Metrics' dashboard)\""
+    "echo \"✓ Dashboard ConfigMap deployed to namespace: $NAMESPACE\"\n",
+    "echo \"  Cluster-wide Grafana sidecar will auto-discover it within ~30 seconds\"\n",
+    "echo \"  Access at: $GRAFANA_URL (look for 'Dynamo Inference Metrics' dashboard)\"\n",
+    "echo \"\"\n",
+    "echo \"Note: The ConfigMap is created in your namespace ($NAMESPACE), but the\"\n",
+    "echo \"      cluster-wide Grafana searches all namespaces for dashboards.\""
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "382266ea",
+   "id": "113c451e",
    "metadata": {},
    "source": [
     "---\n",
@@ -412,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a946a353",
+   "id": "c3a5d5e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +442,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d09da49",
+   "id": "cb2b36c8",
    "metadata": {},
    "source": [
     "---\n",
@@ -590,7 +593,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7127982c",
+   "id": "1972bf4b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -629,34 +632,38 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c209cd65",
+   "id": "847612b4",
    "metadata": {},
    "source": [
-    "### Exercise 4: Cleanup Monitoring Stack\n",
+    "### Exercise 4: Cleanup Your Monitoring Resources\n",
     "\n",
-    "When you're done exploring, you can remove the monitoring stack:\n"
+    "When you're done exploring, you can remove the monitoring resources you created:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d50d601",
+   "id": "1d23509b",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
-    "# Uninstall kube-prometheus-stack (optional - only if you're done)\n",
-    "# helm uninstall prometheus -n $NAMESPACE\n",
+    "# Remove PodMonitors and Dashboard ConfigMap from your namespace\n",
+    "echo \"Cleaning up monitoring resources from namespace: $NAMESPACE...\"\n",
     "\n",
-    "# Or keep it for future use!\n",
-    "echo \"Monitoring stack is still running in namespace: $NAMESPACE\"\n",
-    "echo \"To remove it later, run:\"\n",
-    "echo \"  helm uninstall prometheus -n $NAMESPACE\""
+    "kubectl delete podmonitor -n $NAMESPACE --all\n",
+    "kubectl delete configmap grafana-dashboard-dynamo-inference -n $NAMESPACE 2>/dev/null || true\n",
+    "\n",
+    "echo \"\"\n",
+    "echo \"✓ Monitoring resources removed from your namespace\"\n",
+    "echo \"\"\n",
+    "echo \"Note: The cluster-wide Prometheus and Grafana remain active.\"\n",
+    "echo \"      Only your PodMonitors and dashboard ConfigMap were removed.\""
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "52991850",
+   "id": "20c194ef",
    "metadata": {},
    "source": [
     "---\n",
@@ -664,20 +671,21 @@
     "## Summary\n",
     "\n",
     "### What You Learned\n",
-    "- ✅ How to install namespace-scoped Prometheus and Grafana\n",
+    "- ✅ How to access cluster-wide Prometheus and Grafana\n",
     "- ✅ Understanding Prometheus Operator and PodMonitors\n",
     "- ✅ Configuring automatic metrics collection from Dynamo\n",
-    "- ✅ Creating and viewing Grafana dashboards\n",
+    "- ✅ Creating and deploying Grafana dashboards via ConfigMaps\n",
     "- ✅ Key Dynamo performance metrics\n",
     "- ✅ Using Prometheus queries for analysis\n",
     "- ✅ Correlating load with performance metrics\n",
     "\n",
     "### Key Takeaways\n",
-    "- **Namespace-scoped monitoring** enables safe multi-tenant clusters\n",
+    "- **Cluster-wide monitoring** enables shared observability infrastructure\n",
     "- **PodMonitors** automatically discover and scrape Dynamo metrics\n",
     "- **Prometheus** provides powerful query language for metric analysis\n",
     "- **Grafana** offers rich visualizations for real-time monitoring\n",
     "- **Key metrics** like TTFT and ITL are critical for LLM performance\n",
+    "- **Dashboard ConfigMaps** with `grafana_dashboard: \"1\"` label are auto-discovered by Grafana sidecar\n",
     "\n",
     "### Next Steps\n",
     "- In **Lab 2**, you'll explore disaggregated serving and monitor the separate prefill/decode workers\n",
@@ -694,7 +702,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67f9fae3",
+   "id": "688050b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -713,7 +721,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19ca87cc",
+   "id": "17d61d75",
    "metadata": {},
    "source": [
     "### Grafana Dashboard Not Appearing\n"
@@ -722,21 +730,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab2401db",
+   "id": "4ab19286",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
     "# Check if dashboard ConfigMap has correct labels\n",
-    "kubectl get configmap -n $NAMESPACE grafana-dynamo-dashboard -o yaml | grep -A 5 labels\n",
+    "kubectl get configmap -n $NAMESPACE grafana-dashboard-dynamo-inference -o yaml | grep -A 5 labels\n",
     "\n",
     "echo \"\"\n",
-    "echo \"The ConfigMap should have label: grafana_dashboard: '1'\""
+    "echo \"The ConfigMap should have label: grafana_dashboard: '1'\"\n",
+    "echo \"\"\n",
+    "echo \"If the ConfigMap exists but dashboard doesn't appear:\"\n",
+    "echo \"  1. Wait 30-60 seconds for Grafana sidecar to scan\"\n",
+    "echo \"  2. Check Grafana logs for any import errors\"\n",
+    "echo \"  3. Verify cluster-wide Grafana has sidecar.dashboards.enabled=true\""
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c66448ae",
+   "id": "6c95988d",
    "metadata": {},
    "source": [
     "### Can't Access Grafana\n"
@@ -745,7 +758,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a3aad79",
+   "id": "9ba96b74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -760,7 +773,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f78db30b",
+   "id": "bf622c3f",
    "metadata": {},
    "source": [
     "### Port Forwards Not Working\n"
@@ -769,7 +782,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e84a6bc5",
+   "id": "b6a1db0d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -784,7 +797,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3e605b0",
+   "id": "997df9e0",
    "metadata": {},
    "source": [
     "---\n",
